--- a/receiver/src/main/resources/application.properties
+++ b/receiver/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port = 8084
+spring.application.name= receiver
 #External service base path
 content-service = ${EXTERNAL_SERVICE:http://localhost:8080/}
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+```
 
