--- a/sender/src/main/resources/application.properties
+++ b/sender/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port = 8085
 #External service base path
-content-service = ${EXTERNAL_SERVICE:http://localhost:8084/}
+spring.application.name= sender
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 
